[package]
name = "compio-openssl"
license = "MIT"
description = "A compio asynchronous stream of OpenSSL stream"
homepage = "https://github.com/Incisakura/compio-openssl"
repository = "https://github.com/Incisakura/compio-openssl"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = { version = "0.14", features = ["io", "io-compat"] }
openssl = "0.10"
openssl-sys = "0.9"

[dev-dependencies]
compio = { version = "0.14", features = ["macros"] }
